Add changelog and new contributor

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.0.3
+=====
+- Add a proper app icon (contributed by @shish)
+
 0.0.2
 =====
 - Update logo to a vector logo (thx to Arminius@syncthing forum)
